Styling fixes for landing page center section Also, more code cleanup, it's legible now, woot

--- a/expo/gbe/static/styles/base.css
+++ b/expo/gbe/static/styles/base.css
@@ -567,6 +567,15 @@ div.alert
         padding: 10px;
 }
 
+/* Landing page, center blocks */
+
+div.landing_box>div.schedule_section> div.event {
+  /* set line-height here */
+}
+
+div.landing_box>div.ticket_section > div.ticket {
+  /* set line-height here */
+}
 
 /* Landing page, right-column blocks */
 
